refactor: migrate plugins/hypervisors/kvm to JDK 21 APIs
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
  in LibvirtComputingResource, LibvirtVMDef, and LibvirtVifDriverTest
- Replace deprecated new URL(String) with URI.create(String).toURL()
  in LibvirtConsoleProxyLoadCommandWrapper
- Update exception handling for NoSuchMethodException and InvocationTargetException

Co-Authored-By: hitomi.sawamura@gmail.com <hitomi.sawamura@gmail.com>